# projeto-post-blog-crewai

create_crew_project/: README.md  pyproject.toml
create_crew_project/src/create_crew_project/: crew.py  main.py
create_crew_project/src/create_crew_project/config/: agents.yaml  tasks.yaml
por-ipynb/: .env  01_blog_post_crew.ipynb
projeto_para_producao/: README.md  pyproject.toml  report.md  requirements.txt
projeto_para_producao/src/projeto_para_producao/: crew.py  main.py
prompts-prontos/: azure_openai_collection.json  azure_openai_environment.json
