[project]
name = "create_crew_project"
version = "0.1.0"
description = "create_crew_project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
create_crew_project = "create_crew_project.main:run"
run_crew = "create_crew_project.main:run"
train = "create_crew_project.main:train"
replay = "create_crew_project.main:replay"
test = "create_crew_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
